# packages/contracts/openapi.json
@@ -5353,7 +5353,8 @@
                 "CONTACT",
                 "SERVICES",
                 "TERMS",
-                "PRIVACY"
+                "PRIVACY",
+                "SIZE_GUIDE"
               ],
               "type": "string"
             }
@@ -5414,7 +5415,8 @@
                 "CONTACT",
                 "SERVICES",
                 "TERMS",
-                "PRIVACY"
+                "PRIVACY",
+                "SIZE_GUIDE"
               ],
               "type": "string"
             }
@@ -8679,7 +8681,8 @@
           "CONTACT",
           "SERVICES",
           "TERMS",
-          "PRIVACY"
+          "PRIVACY",
+          "SIZE_GUIDE"
         ]
       },
       "PublicContentPageMediaDto": {
